# temporal-python

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DOCKER_SETUP.md  LICENSE  MAKEFILE_USAGE.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.cursor/rules/: project_rules.md
.trae/rules/: python.toml
deploy/k8s/: README.md  kuboard-worker-config.yaml  kuboard-worker-deployment.yaml
docker/: README.md  build-all.sh  build-base.sh  build-kuboard.sh  build-vm.sh
docker/base/: Dockerfile
docker/kuboard/: Dockerfile
docker/vm/: Dockerfile
src/activities/: kuboard_activities.py  vm_activities.py
src/clients/: start_vm_workflow.py
src/services/: kuboard_service.py  vm_service.py
src/shared/: config.py  schemas.py
src/workers/: kuboard_worker.py  vm_worker.py
src/workflows/: kuboard_workflows.py  vm_workflows.py
temporal_python/activities/: kuboard_activities.py  vm_activities.py
temporal_python/clients/: start_vm_workflow.py
temporal_python/services/: kuboard_service.py  vmware_service.py
temporal_python/shared/: config.py
temporal_python/workers/: kuboard_worker.py  vm_worker.py
temporal_python/workflows/: kuboard_workflows.py  vm_workflows.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py
tests/integration/: test_kuboard_workflow.py  test_vm_creation_integration.py
tests/unit/: test_config.py  test_kuboard_activities.py  test_kuboard_service.py  test_schemas.py  test_vm_activities.py  test_vm_workflows.py  test_vmware_service.py
